[metadata]

name = mvptree
description = Multi-Vantage Point Trees
author = Patrick T. Komiske III
author_email = pkomiske@mit.edu
long_description = file: README.md, CHANGELOG.txt, LICENSE.txt
long_description_content_type = text/markdown
license = GPLv3

[options]

packages = find:
zip_safe = False
install_requires =
    numpy>=1.12.0

[options.package_data]
* = *.pxd, *.h