[metadata]

name = MVPTree
description = Multi-Vantage Point Trees
author = Patrick T. Komiske III
author_email = pkomiske@mit.edu
long_description = file: README.md
long_description_content_type = text/markdown
license = GPL-3.0
license_file = LICENSE

[options]

packages = find:
zip_safe = False
install_requires =
    numpy>=1.16.0
    wasserstein>=0.3.1

[options.package_data]

* = *.pxd, *.h